# cp_measure

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  README.org  dprint.json  flake.nix  noxfile.py  poetry.toml  pyproject.toml
.github/scripts/: benchmark.py  run_benchmark.sh
.github/workflows/: benchmark.yml  lint.yaml  lint.yml  publish.yaml  publish.yml  python-package.yml  ruff.yaml  test.yaml  tests.yml
benchmarks/: benchmark.py  benchmark_core.py  benchmark_duckdb.py  benchmark_sizeshape.py  parse_features.py  util_names.py  util_plot.py  utils.py
scripts/: benchmark_numba.py
src/cp_measure/: __init__.py  _converters.py  _detect.py  _sanitize.py  bulk.py  examples.py  featurizer.py  synth.py  utils.py
tasks/: AUTONOMOUS_PROGRESS.md  MERGED_STACK_BENCHMARK.md  PR_PERF_ANALYSIS.md  ab_granularity_recon.py  ab_granularity_recon2.py  backend_cross_pollination.md  bench_batching_conformance.py  bench_coloc.py  bench_directcore.py  bench_directscan.py  bench_feret.py  bench_grand.py  bench_granularity_factors.py  bench_hybrid_hull.py  bench_label_discovery.py  bench_multiprocess_images.py  bench_numba_intensity.py  bench_numbaflat.py  bench_radial.py  bench_radial_legacy_vs_perobject.py  bench_texture.py  bench_tiered_merged.py  compare_alan_numba.py  cprofile_rp_remaining.py  cprofile_ss2.py  cprofile_ss_post77.py  deep_feret_investigation.md  deep_feret_investigation.py  exp_boundary.py  exp_costes_scale1.py  exp_feret_hull.py  exp_feret_ijv.py  exp_floor.py  exp_geodesic_worstcase.py  exp_propagate_vs_edt.py  exp_quantiles.py  exp_rwc_ranks.py  exp_rwc_sort.py  implementation_inventory.md  legacy_toggle_candidates.md  (+53 more)
test/: conftest.py  test_backend_correctness.py  test_bench.py  test_coloc_backend.py  test_coloc_fused.py  test_coloc_kernels.py  test_core_measurements.py  test_costes_kernels.py  test_fast_measurements.py  test_featurizer.py  test_feret_backend.py  test_feret_kernels.py  test_granularity.py  test_granularity_backend.py  test_granularity_kernels.py  test_intensity_numba.py  test_measurements.py  test_multimask.py  test_multipixels.py  test_primitives_shapes.py  test_radial_backend.py  test_radial_distribution.py  test_radial_kernels.py  test_radial_zernike.py  test_return_as.py  test_sanitize.py  test_sizeshape_moments.py  test_sizeshape_numba.py  test_synth.py  test_targets.py  test_texture_backend.py  test_texture_kernels.py  test_zernike.py  test_zernike_backend.py  test_zernike_kernels.py
(+54 files in other folders)
