[project]
name = "cp_measure"
version = "0.1.12"
description = "cp_measure implements CellProfiler measurements in an accessible interface. "
authors = [
    {name= "Alan Munoz"},
]
readme = "README.md"
requires-python = "<3.14,>=3.10"

dependencies = [
    "scikit-image>0.24",
    "scipy>=1.9.1",
    "centrosome>=1.3.2",
    "numpy>=2",
    "mahotas<2.0.0,>=1.4.13",
]

[project.urls]
Homepage = "https://github.com/afermg/cp_measure"

[tool.pdm.build]
includes = [
    "src/cp_measure",
]

[tool.uv.sources]
centrosome = { path = "../centrosome", editable = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "ipdb>=0.13.13",
    "jupyter>=1.0.0",
    "jupytext>=1.15.0",
]
test = [
    "pytest",
    "pytest-cov",
]

