[project]
name = "cp_measure"
version = "0.1.12"
description = "cp_measure implements CellProfiler measurements in an accessible interface. "
authors = [
    {name= "Alan Munoz"},
]
readme = "README.md"
requires-python = "<3.15,>=3.10"

dependencies = [
    "scikit-image>=0.25",
    "scipy>=1.9.1",
    "centrosome @ git+https://github.com/afermg/centrosome.git@skimage_no_upper_bound",
    "numpy >=1.22.1",
    "mahotas<2.0.0,>=1.4.13",
]

[project.urls]
Homepage = "https://github.com/afermg/cp_measure"

[tool.pdm.build]
includes = [
    "src/cp_measure",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "ipdb>=0.13.13",
    "jupyter>=1.0.0",
    "jupytext>=1.15.0",
]
test = [
    "pytest",
    "pytest-cov",
]

